crates/psqs/src/queue/snapshots/psqs__queue__pbs__tests__molpro_pbs.snap
---
source: src/queue/pbs.rs
expression: got
---
#!/bin/sh
#PBS -S /bin/bash
#PBS -j oe
#PBS -W umask=022
#PBS -l walltime=1000:00:00
#PBS -l ncpus=1
#PBS -l mem=8gb
#PBS -q workq

module load openpbs molpro

export WORKDIR=$PBS_O_WORKDIR
export TMPDIR=/tmp/$USER/$PBS_JOBID
cd $WORKDIR
mkdir -p $TMPDIR
trap 'rm -rf $TMPDIR' EXIT

export MOLPRO_CMD="molpro -t $NCPUS --no-xml-output"
$MOLPRO_CMD opt0.inp
$MOLPRO_CMD opt1.inp
$MOLPRO_CMD opt2.inp
$MOLPRO_CMD opt3.inp
